changed to use last id of url

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Youtube</title>
+    <title>YouDownloader</title>
     <link
       rel="stylesheet"
       href="../node_modules/materialize-css/dist/css/materialize.min.css"
@@ -17,8 +17,8 @@
     <div class="container" id="cont">
       <div id="inputs">
         <form id="form" class="input-field animated slideInDown">
-          <input id="url" type="url" class="validate" />
-          <label for="url">Full Youtube Url</label>
+          <input id="url" type="text" class="validate" />
+          <label for="url">Last Id of YouTube Video URL</label>
         </form>
         <button
           id="download"
