--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
         ></iframe>
         <div id="quality" style="float: right;">
           <div class="input-field col s12">
-            <select>
+            <select onchange="values(1)">
               <option value="1">240p</option>
               <option value="2">360p</option>
               <option value="3">480p</option>
@@ -48,11 +48,14 @@
             </select>
             <label>Select Quality</label>
           </div>
+          <button onclick="values(1)" class="btn waves-effect waves-light">
+            Download File
+          </button>
         </div>
       </div>
     </div>
+    <script src="./js/jquery.min.js"></script>
     <script src="../node_modules/materialize-css/dist/js/materialize.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
     <script src="./js/index.js"></script>
     <script>
