Youtube-dl working on dev mode but not on build/Prod Mode. Please help

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
         ></iframe>
         <div id="quality" style="float: right;">
           <div class="input-field col s12">
-            <select onchange="values(1)">
+            <select>
               <option value="1">240p</option>
               <option value="2">360p</option>
               <option value="3">480p</option>
